# smt-fetch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: crontab  dashboard.html  dashboard.py  db.py  entrypoint.sh  report.py  requirements.txt  run.sh  smt_fetch.py  weather.py
tests/: conftest.py  test_dashboard.py  test_db.py  test_report.py  test_smt_fetch.py  test_weather.py
