[project]
name = "smt-fetch"
version = "1.0.0"
description = "Smart Meter Texas 15-min interval data downloader"
requires-python = ">=3.11"
dependencies = [
    "smart-meter-texas>=0.5.5",
    "python-dotenv>=1.0",
    "certifi>=2026.2.25",
    "pyOpenSSL>=24.0.0",
    "aiohttp>=3.9",
    "reportlab>=4.0",
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
