[project]
name = "smt-fetch"
version = "1.0.0"
description = "Smart Meter Texas 15-min interval data downloader"
requires-python = ">=3.11"
dependencies = [
    "smart-meter-texas>=0.5.5",
    "python-dotenv>=1.0",
    "certifi>=2026.2.25",
    "pyOpenSSL>=24.0.0",
    "aiohttp>=3.9",
    "reportlab>=4.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
